Fixed minicart cancel button area overlapping issue

--- a/app/design/frontend/Magento/luma/Magento_Checkout/web/css/source/module/_minicart.less
+++ b/app/design/frontend/Magento/luma/Magento_Checkout/web/css/source/module/_minicart.less
@@ -166,6 +166,7 @@
                     @_icon-font-line-height: 16px,
                     @_icon-font-text-hide: true
                 );
+                margin: 10px;
             }
 
             &.showcart {
